[gd_scene load_steps=2 format=3 uid="uid://bwmfqse5rocjw"]

[ext_resource type="Script" uid="uid://by7xfrg6rheja" path="res://Scripts/physics_entity.gd" id="1_8r0by"]

[node name="PhysicsEntity" type="RigidBody2D" groups=["Component Entities"]]
collision_layer = 4
collision_mask = 39
input_pickable = true
script = ExtResource("1_8r0by")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
